objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Started</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Analysed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analysed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ByPass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>IF( Amount &lt;= 1500 , &apos;Low_Complex&apos;,

IF( (Amount &gt;=1500 &amp;&amp; Amount &lt;= 10000) , &apos;Medium_Complex&apos;,

IF(( Amount &gt;= 10000) , &apos;High_Complex&apos; ,

NULL )



))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Selection__c</fullName>
        <label>Course Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Sql</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Project_End_Date__c</fullName>
        <label>Expected Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Banking</fullName>
        <active>true</active>
        <businessProcess>Started</businessProcess>
        <label>Banking</label>
    </recordTypes>
    <recordTypes>
        <fullName>education</fullName>
        <active>true</active>
        <businessProcess>Started</businessProcess>
        <label>education</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Analysed_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(OR(ISPICKVAL(StageName,&apos;Prospecting&apos;),ISPICKVAL(StageName, &apos;Qualification&apos;))),ISPICKVAL(StageName, &apos;Needs Analysis&apos;), Analysed__c = FALSE,ISCHANGED(Amount) )</errorConditionFormula>
        <errorMessage>Please validate the fields Analysed, Amount and Stage before saving</errorMessage>
    </validationRules>
</CustomObject>